--- a/class-02-jquery-and-events/pair-assignment/sam-ben/styles/base.css
+++ b/class-02-jquery-and-events/pair-assignment/sam-ben/styles/base.css
@@ -1,15 +1,26 @@
-/* TODO: Add some coordinated colors to make the blog more distinguished:
-         Use an accent color for all links, and remove their underline. */
+* {
+  border-radius: 20px;
+  padding: 5px;
+  margin: 10px;
+}
 
 body {
+  background-color: #b2cecf;
+  color: black;
   line-height: 1.5;
   font-size: 100%;
   color: #313131;
+}
+img {
+  width: 20%;
+  height: auto;
+  box-shadow: 5px 5px 5px #239489;
 }
 
 hr {
   margin: 1em;
   width: 80%;
+  background: #222930
 }
 
 /*TEXT STYLES
@@ -27,9 +38,11 @@ address {
 
 a, a:link, a:active {
   color: #777;
+  text-decoration: none;
 }
 
 a:hover, a:focus {
+  color: #d02552;
 }
 
 a:visited {
